fixed button size on mobile screens

--- a/style.css
+++ b/style.css
@@ -81,3 +81,7 @@ button[type="submit"] {
     border: 5px solid white;
     margin: 10px auto;
 }
+
+textarea {
+    width: 200px;
+}
